adding float, clear

--- a/index.html
+++ b/index.html
@@ -11,23 +11,17 @@
 	<nav>
 		nav
 	</nav>
-
-	<table>
-	<tr>
-	<td> <section>
+	 <section>
 		section
 		<article>
 			article
 			<h1>h1, h2, h3</h1>
 			<p>p</p>
 		</article>
-	</section> </td>
-	<td> <aside>
+	</section> 
+	<aside>
 		aside
 		</aside>
-	</td>
-	</tr>
-	</table>
 	<footer> 
 	footer
 	</footer>
