--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 	<nav>
 		nav
 	</nav>
+	<div id="content">
 	 <section>
 		section
 		<article>
 			article
-			<h1>h1, h2, h3</h1>
+			<div id="hs">
+			<h1>h1, </h1><h2>h2, </h2><h3>h3</h3>
+			</div>
 			<p>p</p>
 		</article>
 	</section> 
 	<aside>
 		aside
 		</aside>
+	</div>
 	<footer> 
 	footer
 	</footer>
